# nats-by-example

./: .gitignore  Makefile  NATSbyExample.sln  README.md  dotnet2.sln  go.mod  go.work  go.work.sum  typescript  vercel.json
.github/workflows/: ci.yaml  deploy.yaml  preview.yaml
auth/create-jwts/: README.md  go.mod  go.sum  main.go
cli/: docker.go  docs.go  docs_test.go  main.go  parse.go
cmd/nbe/: docker.go  docs.go  docs_test.go  eject.go  git.go  go.mod  go.sum  main.go  main_test.go  parse.go  recording.go  version.go
docker/: docker-compose.cluster.yaml  docker-compose.yaml
docker/c/: Dockerfile  install-nats-c.sh
docker/cli/: Dockerfile  docker-compose.yaml
docker/crystal/: Dockerfile  shard.yml
docker/csharp/: Dockerfile
docker/deno/: Dockerfile
docker/dotnet/: Dockerfile  example.csproj
docker/dotnet2/: Dockerfile  example.csproj
docker/elixir/: Dockerfile
docker/go/: Dockerfile  go.mod  go.sum  main.go
docker/java/: Dockerfile  build.gradle  settings.gradle
docker/julia/: Dockerfile
docker/node/: Dockerfile  package-lock.json  package.json
docker/python/: Dockerfile  requirements.txt
docker/rust/: Cargo.toml  Dockerfile
examples/: meta.yaml
examples/auth/: meta.yaml
examples/embedded/: meta.yaml
examples/integrations/: meta.yaml
examples/jetstream/: meta.yaml
examples/kv/: meta.yaml
html/: index.html  main.css  reset.css
output/: index.html  main.css
replace-cluster-nodes/: README.md
static/: main.css  main.js
tools/: build.sh  format.sh  generate.go  generate.sh  measure.go  measure.sh  outputs.sh  vet.sh
(+782 files in other folders)
