[package]
name = "app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
async-nats = { git = "https://github.com/nats-io/nats.rs", branch = "main" }
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.21"
serde_json = "1.0.82"
serde = "1.0.139"
rand = "0.8"
