[package]
name = "app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
async-nats = {version = "0.35.1", features = ["service"]}
tokio = { version = "1.39.1", features = ["full"] }
futures = "0.3.28"
serde_json = "1.0.104"
serde = { version = "1.0.184", features = ["derive"] }
rand = "0.8"
